...
    <string name="blue_label">Blue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="search_language">Search language</string>
    <string name="clear_search">Clear search</string>
    <string name="no_languages_found">No languages found</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_british_english" translatable="false">British English</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_arabic" translatable="false">العربية</string>
    <string name="language_chinese_simplified" translatable="false">简体中文</string>
    <string name="language_spanish" translatable="false">Español</string>
...
